# onnx-shape-inference

./: .lintrunner.toml  LICENSE  README.md  conftest.py  pyproject.toml  requirements-test.txt
.github/: copilot-instructions.md  dependabot.yml
.github/skills/: debugging-shape-inference.md  shape-inference-ops.md
.github/skills/debugging-shape-inference/: SKILL.md
.github/skills/shape-inference-ops/: SKILL.md
.github/workflows/: fuzz-nightly.yml  main.yml  python-package.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/Rai/: history.md
.squad/agents/dallas/: charter.md  history.md
.squad/agents/fact-checker/: history.md
.squad/agents/lambert/: charter.md  history.md
.squad/agents/parker/: charter.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/ripley/: charter.md  history.md
.squad/agents/scribe/: history.md
.squad/casting/: history.json  registry.json
.squad/decisions/inbox/: lambert-coverage-harness.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-07-23T07-41-00Z-fuzzing-oracle.md  2026-07-23T08-16-00Z-oracle-propagation.md  2026-07-23T14-25-17Z-parker-elementwise-matmul.md  2026-07-23T15-16-16.739+00-00-0.3.0-adversarial-review.md
.squad/orchestration-log/: 2026-07-23T07-41-00Z-lambert.md  2026-07-23T07-41-00Z-ripley.md  2026-07-23T08-16-00Z-ripley.md  2026-07-23T15-16-16.739+00-00-scribe.md
docs/: design.md  fuzzing-design.md  fuzzing.md
onnx-shape-inference/: shape_inference.py
requirements/ci/: requirements.txt
requirements/lintrunner/: requirements.txt
src/onnx_shape_inference/: __about__.py  __init__.py  __main__.py  _broadcast.py  _broadcast_test.py  _constraints.py  _constraints_test.py  _context.py  _context_error_test.py  _context_test.py  _coverage_regression_test.py  _engine.py  _engine_test.py  _functions.py  _functions_test.py  _patch.py  _registry.py  _registry_test.py  _symbolic_shapes.py  _symbolic_shapes_test.py
src/onnx_shape_inference/_fuzz/: __init__.py  _binding.py  _generator.py  _generator_test.py  _harness.py  _oracles.py  _oracles_test.py  _repro.py  _shrink.py  _types.py
src/onnx_shape_inference/_internal/: shape_inference.py  shape_inference_test.py
src/onnx_shape_inference/_ops/: __init__.py  _add_test.py  _ai_onnx_ml.py  _anonymous_dim_test.py  _arg.py  _arg_test.py  _attention.py  _attention_test.py  _cast.py  _cast_test.py  _concat.py  _concat_test.py  _constant.py  _constant_of_shape.py  _constant_of_shape_test.py  _constant_test.py  _control_flow.py  _control_flow_test.py  _conv.py  _conv_test.py  _conv_transpose.py  _conv_transpose_test.py  _data_dependent.py  _data_dependent_test.py  _data_propagation_test.py  _depth_space.py  _depth_space_test.py  _dropout.py  _dropout_test.py  _einsum.py  _einsum_test.py  _elementwise.py  _elementwise_test.py  _expand.py  _expand_test.py  _gather.py  _gather_test.py  _gemm.py  _gemm_test.py  _loss.py  (+65 more)
testdata/: qwen3.5-2B-f16.onnx.pbtxt
tests/: __init__.py  shape_inference_backend_test.py  shape_inference_cases_test.py  shape_inference_fuzz_test.py
tests/fuzz/: __init__.py  _binding.py  _generator.py  _generator_test.py  _harness.py  _oracles.py  _oracles_test.py  _repro.py  _runtime_worker.py  _shrink.py  _types.py
tests/fuzz_corpus/: seeds.json
