[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onnx-shape-inference"
dynamic = ["version"]
description = 'Symbolic shape inference for ONNX models'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Justin Chu", email = "justinchuby@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "sympy",
  "numpy",
  "onnx>=1.14",
  "typing_extensions",
]

[project.urls]
Documentation = "https://github.com/justinchuby/onnx-shape-inference#readme"
Issues = "https://github.com/justinchuby/onnx-shape-inference/issues"
Source = "https://github.com/justinchuby/onnx-shape-inference"

[tool.hatch.version]
path = "src/onnx_shape_inference/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.black]
target-version = ["py38"]

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
  "A",
  "ARG",
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # pydocstyle
  "E", # pycodestyle
  "F", # Pyflakes
  "G", # flake8-logging-format
  "ICN",
  "ISC", # flake8-implicit-str-concat
  "N", # pep8-naming
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "NPY", # modern numpy
  "PERF", # Perflint
  "RUF", # Ruff-specific rules
  "T10", # flake8-debugger
  "TID252", # Disallow relative imports
  "UP", # pyupgrade
  "W", # pycodestyle
  "YTT", # flake8-2020
]
ignore = [
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  "E501", # black handles line length
  "PLR2004", # Ignore magic numbers for now
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.coverage.run]
source_pkgs = ["onnx_shape_inference"]
branch = true
parallel = true
omit = [
  "src/onnx_shape_inference/__about__.py",
]

[tool.coverage.paths]
onnx_shape_inference = ["src/onnx_shape_inference"]
tests = ["src/onnx_shape_inference"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
