[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx-shape-inference"
dynamic = ["version"]
description = 'Symbolic shape inference for ONNX models'
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Justin Chu", email = "justinchuby@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy",
  "onnx-ir>=0.2.0",
  "typing_extensions",
]

[project.urls]
Documentation = "https://github.com/justinchuby/onnx-shape-inference#readme"
Issues = "https://github.com/justinchuby/onnx-shape-inference/issues"
Source = "https://github.com/justinchuby/onnx-shape-inference"

[project.scripts]
onnx-shape-inference = "onnx_shape_inference.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "onnx_shape_inference.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["onnx_shape_inference*"]

[tool.pytest.ini_options]
markers = [
    "fuzz: deterministic fast fuzzing",
    "fuzz_long: nightly, time-boxed fuzzing",
]

[tool.ruff]
line-length = 95
target-version = "py39"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # Pyflakes
    "G", # flake8-logging-format
    "I", # isort
    "ISC", # flake8-implicit-str-concat
    "LOG", # flake8-logging
    "N", # pep8-naming
    "NPY", # modern numpy
    "PERF", # Perflint
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "SLOT", # flake8-slot
    "T10", # flake8-debugger
    "TID", # Disallow relative imports
    "TRY", # flake8-try-except-raise
    "UP", # pyupgrade
    "W", # pycodestyle
    "YTT", # flake8-2020
]
# Select preview rules
preview = true
ignore = [
    "B9",  # Opinionated bugbear rules
    "unnecessary-collection-call", # Sometimes it is preferable when we construct kwargs
    "D1", # D1 is for missing docstrings, which is not yet enforced.
    "non-imperative-mood", # First line of docstring should be in imperative mood
    "E1", "E2", "E3", # Pycodestyle formatting rules that conflicts with the formatter
    "line-too-long", # Line length. Not enforced because black will handle formatting
    "needless-bool", # "Return the condition directly" obscures logic sometimes
    "numpy-legacy-random", # We may not always need a generator
    "try-except-in-loop", # try-except in loops sometimes necessary
    "manual-list-comprehension", # List comprehension is not always readable
    "redundant-numeric-union", # int | float is more clear
    "unsorted-dunder-all", # We don't need to sort __all__ for elements to be grouped
    "incorrectly-parenthesized-tuple-in-subscript", # Parentheses for tuple in subscripts is more readable
    "used-dummy-variable", # Variables with `_` prefix may not be dummy variables in all cases
    "non-empty-init-module", # More relaxed __init__.py files
    "collapsible-if", # Collapible if statements are not always more readable
    "if-else-block-instead-of-if-exp", # We don't always encourage ternary operators
    "if-with-same-arms", # Don't always combine if branches for debugability
    "if-else-block-instead-of-dict-lookup", # Don't use dict lookup to replace if-else
    "raise-vanilla-args", # Messages can be constructed in the exception
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["relative-imports"] # Allow relative imports in init files
"**/*_test.py" = ["banned-api"] # pathlib is allowed in tests

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"
